添加自定义配置文件

--- a/config/config.json
+++ b/config/config.json
@@ -1,1 +1,9 @@
-{}
+{
+	"mode": "loop",
+	"account": ["+8617376509219", "xiaomihehuo"],
+	"loop": [13029620003, 13029620016],
+	"file": "/data/name.txt",
+	"dump": 10,
+	"sleep": 30,
+	"sleep-flag": 4
+}
